--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -15,7 +15,7 @@
     height: 100vh;
     top: 0;
     left: 0;
-    background: #000000;
+    background: #ed87d9;
     overflow: hidden;
     z-index: -1;
 }
@@ -34,7 +34,7 @@
 
 
 .background span:nth-child(0) {
-    color: #b7b7b8;
+    color: #7f00b2;
     top: 7%;
     left: 16%;
     animation-duration: 8s;
@@ -43,7 +43,7 @@
     box-shadow: 24vmin 0 3.2080742576123242vmin currentColor;
 }
 .background span:nth-child(1) {
-    color: #626061;
+    color: #8e22bb;
     top: 80%;
     left: 47%;
     animation-duration: 16s;
@@ -52,7 +52,7 @@
     box-shadow: 24vmin 0 3.3206230735456135vmin currentColor;
 }
 .background span:nth-child(2) {
-    color: #626061;
+    color: #8e22bb;
     top: 74%;
     left: 66%;
     animation-duration: 20s;
@@ -61,7 +61,7 @@
     box-shadow: -24vmin 0 3.311076468357836vmin currentColor;
 }
 .background span:nth-child(3) {
-    color: #3d3d3d;
+    color: #ab49cc;
     top: 67%;
     left: 35%;
     animation-duration: 43s;
@@ -70,7 +70,7 @@
     box-shadow: 24vmin 0 3.2095519666186574vmin currentColor;
 }
 .background span:nth-child(4) {
-    color: #b7b7b8;
+    color: #7f00b2;
     top: 9%;
     left: 71%;
     animation-duration: 31s;
@@ -79,7 +79,7 @@
     box-shadow: 24vmin 0 3.1129717955666383vmin currentColor;
 }
 .background span:nth-child(5) {
-    color: #b7b7b8;
+    color: #7f00b2;
     top: 100%;
     left: 10%;
     animation-duration: 7s;
@@ -88,7 +88,7 @@
     box-shadow: -24vmin 0 3.4175993552583184vmin currentColor;
 }
 .background span:nth-child(6) {
-    color: #626061;
+    color: #8e22bb;
     top: 71%;
     left: 99%;
     animation-duration: 29s;
@@ -97,7 +97,7 @@
     box-shadow: -24vmin 0 3.934776074054012vmin currentColor;
 }
 .background span:nth-child(7) {
-    color: #3d3d3d;
+    color: #ab49cc;
     top: 82%;
     left: 54%;
     animation-duration: 30s;
@@ -106,7 +106,7 @@
     box-shadow: 24vmin 0 3.633205077041133vmin currentColor;
 }
 .background span:nth-child(8) {
-    color: #626061;
+    color: #8e22bb;
     top: 45%;
     left: 74%;
     animation-duration: 34s;
@@ -115,7 +115,7 @@
     box-shadow: -24vmin 0 3.6700264205840156vmin currentColor;
 }
 .background span:nth-child(9) {
-    color: #626061;
+    color: #8e22bb;
     top: 99%;
     left: 71%;
     animation-duration: 39s;
@@ -124,7 +124,7 @@
     box-shadow: 24vmin 0 3.551489630377538vmin currentColor;
 }
 .background span:nth-child(10) {
-    color: #626061;
+    color: #8e22bb;
     top: 84%;
     left: 29%;
     animation-duration: 30s;
@@ -133,7 +133,7 @@
     box-shadow: -24vmin 0 3.80644344730921vmin currentColor;
 }
 .background span:nth-child(11) {
-    color: #626061;
+    color: #8e22bb;
     top: 62%;
     left: 91%;
     animation-duration: 38s;
@@ -142,7 +142,7 @@
     box-shadow: 24vmin 0 3.9795715336756343vmin currentColor;
 }
 .background span:nth-child(12) {
-    color: #626061;
+    color: #8e22bb;
     top: 70%;
     left: 25%;
     animation-duration: 14s;
@@ -151,7 +151,7 @@
     box-shadow: -24vmin 0 3.832566406252402vmin currentColor;
 }
 .background span:nth-child(13) {
-    color: #626061;
+    color: #8e22bb;
     top: 39%;
     left: 34%;
     animation-duration: 20s;
@@ -160,7 +160,7 @@
     box-shadow: 24vmin 0 3.6577698783977803vmin currentColor;
 }
 .background span:nth-child(14) {
-    color: #3d3d3d;
+    color: #ab49cc;
     top: 80%;
     left: 6%;
     animation-duration: 8s;
@@ -169,7 +169,7 @@
     box-shadow: 24vmin 0 3.7424870673827013vmin currentColor;
 }
 .background span:nth-child(15) {
-    color: #626061;
+    color: #8e22bb;
     top: 25%;
     left: 13%;
     animation-duration: 45s;
@@ -178,7 +178,7 @@
     box-shadow: -24vmin 0 3.0331734476604604vmin currentColor;
 }
 .background span:nth-child(16) {
-    color: #3d3d3d;
+    color: #ab49cc;
     top: 9%;
     left: 9%;
     animation-duration: 12s;
@@ -187,7 +187,7 @@
     box-shadow: 24vmin 0 3.871991559122681vmin currentColor;
 }
 .background span:nth-child(17) {
-    color: #3d3d3d;
+    color: #ab49cc;
     top: 53%;
     left: 82%;
     animation-duration: 45s;
@@ -196,7 +196,7 @@
     box-shadow: 24vmin 0 3.928202515037949vmin currentColor;
 }
 .background span:nth-child(18) {
-    color: #3d3d3d;
+    color: #ab49cc;
     top: 97%;
     left: 18%;
     animation-duration: 30s;
@@ -205,7 +205,7 @@
     box-shadow: 24vmin 0 3.289643555436583vmin currentColor;
 }
 .background span:nth-child(19) {
-    color: #3d3d3d;
+    color: #ab49cc;
     top: 97%;
     left: 13%;
     animation-duration: 23s;
@@ -214,7 +214,7 @@
     box-shadow: -24vmin 0 3.7315679823888717vmin currentColor;
 }
 .background span:nth-child(20) {
-    color: #3d3d3d;
+    color: #ab49cc;
     top: 6%;
     left: 98%;
     animation-duration: 37s;
@@ -223,7 +223,7 @@
     box-shadow: 24vmin 0 3.946273952659457vmin currentColor;
 }
 .background span:nth-child(21) {
-    color: #b7b7b8;
+    color: #7f00b2;
     top: 31%;
     left: 89%;
     animation-duration: 41s;
@@ -232,7 +232,7 @@
     box-shadow: 24vmin 0 3.084570205458763vmin currentColor;
 }
 .background span:nth-child(22) {
-    color: #b7b7b8;
+    color: #7f00b2;
     top: 17%;
     left: 29%;
     animation-duration: 8s;
@@ -241,7 +241,7 @@
     box-shadow: -24vmin 0 3.953622696650353vmin currentColor;
 }
 .background span:nth-child(23) {
-    color: #3d3d3d;
+    color: #ab49cc;
     top: 36%;
     left: 88%;
     animation-duration: 9s;
@@ -250,7 +250,7 @@
     box-shadow: 24vmin 0 3.9861942867157256vmin currentColor;
 }
 .background span:nth-child(24) {
-    color: #626061;
+    color: #8e22bb;
     top: 21%;
     left: 54%;
     animation-duration: 34s;
